Добавить ленту iCalendar /api/ics/{token}.ics и ссылку /api/ics/link
